--- a/dwebework.cabal
+++ b/dwebework.cabal
@@ -13,6 +13,8 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     
+    Blaze.ByteString.Builder.Html.Word
+    Dwebework.Blaze
     Dwebework.Config
     Dwebework.Cookie
     Dwebework.Database.Schema
@@ -22,7 +24,6 @@ library
     Dwebework.Response
     Dwebework.Result
     Dwebework.Warp
-    Blaze.ByteString.Builder.Html.Word
   other-modules:       
   default-language: Haskell2010
   ghc-options: -Wall
@@ -31,6 +32,7 @@ library
     base >= 4.8 && < 4.9,
     blaze-builder,
     blaze-html,
+    blaze-markup,
     bytestring,
     Cabal,
     cookie,
@@ -55,7 +57,8 @@ library
     vector,
     wai,
     warp >= 3,
-    warp-tls
+    warp-tls,
+    web-inv-route
 
 benchmark benchmark-blaze
   type: exitcode-stdio-1.0
@@ -66,6 +69,7 @@ benchmark benchmark-blaze
   build-depends:
     base,
     blaze-builder,
+    blaze-markup,
     bytestring,
     text,
     dwebework,
@@ -81,6 +85,7 @@ test-suite test-blaze
   build-depends:
     base,
     blaze-builder,
+    blaze-markup,
     bytestring,
     text,
     dwebework,
