Generalize result monads

--- a/waimwork.cabal
+++ b/waimwork.cabal
@@ -45,7 +45,9 @@ library
     filepath,
     HDBC,
     http-types,
+    lifted-base,
     memory,
+    monad-control,
     network,
     network-uri,
     parsec,
@@ -56,6 +58,7 @@ library
     text,
     time,
     transformers,
+    transformers-base,
     unordered-containers,
     vector,
     wai,
