--- a/stack.yaml
+++ b/stack.yaml
@@ -1,5 +1,7 @@
-resolver: lts-10.9
+resolver: lts-12.1
 flags:
   web-inv-route:
     snap: false
     happstack: false
+extra-deps:
+- web-inv-route-0.1.2.1
