--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,8 @@
-resolver: lts-12.6
+resolver: lts-13.3
 flags:
   web-inv-route:
     snap: false
     happstack: false
 extra-deps:
-- web-inv-route-0.1.2.1
+- postgresql-typed-0.5.3.0
+- web-inv-route-0.1.2.2
